--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "official2",
+  "name": "Shortly",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "webpack-dev-server --content-base ./ --open --inline --hot--compress --history-api-fallback --config build/webpack.dev.config.js --host 172.20.10.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -13,6 +14,9 @@
     "mitt": "^2.1.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-google-login": "^2.0.5",
+    "vue-google-signin-button": "^1.0.4",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
